# github-commit-summarizer

./: .gitignore  LINKEDIN_SETUP.md  WORKFLOW_SETUP.md  daily_workflow.py  fetch_github_commits.py  get_person_urn.py  linkedin_oauth.py  linkedin_post.py  main.py  pyproject.toml
.github/workflows/: daily-pipeline.yml
